{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 171,
  "lineage": "05d6f5df-8102-82e3-3727-e41b915c59ae",
  "resources": [
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:network-acl/acl-0a37b0afe7a2c80ba",
            "default_network_acl_id": "acl-0a37b0afe7a2c80ba",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a37b0afe7a2c80ba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "742735434737",
            "subnet_ids": [
              "subnet-01045d29a0753e017",
              "subnet-01eb98bf7a509dcc4",
              "subnet-0414f20190315e0dc",
              "subnet-0e607ed2a4e123c1a",
              "subnet-0eff49ff3fb6bae8f",
              "subnet-0fc0e785b5a11d8df"
            ],
            "tags": {
              "Name": "tf-rcarrata-default"
            },
            "tags_all": {
              "Name": "tf-rcarrata-default"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:route-table/rtb-0ee916236e243ecf7",
            "default_route_table_id": "rtb-0ee916236e243ecf7",
            "id": "rtb-0ee916236e243ecf7",
            "owner_id": "742735434737",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "tf-rcarrata-default"
            },
            "tags_all": {
              "Name": "tf-rcarrata-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:security-group/sg-0484bd9820f180075",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0484bd9820f180075",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "742735434737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-rcarrata-default"
            },
            "tags_all": {
              "Name": "tf-rcarrata-default"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bd2993455e1ba15",
            "domain": "vpc",
            "id": "eipalloc-08bd2993455e1ba15",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-212-135-212.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.212.135.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-rcarrata-eu-west-1a"
            },
            "tags_all": {
              "Name": "tf-rcarrata-eu-west-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b2b4fa5c561f453",
            "domain": "vpc",
            "id": "eipalloc-02b2b4fa5c561f453",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-18-179-199.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.18.179.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-rcarrata-eu-west-1b"
            },
            "tags_all": {
              "Name": "tf-rcarrata-eu-west-1b"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e187543173757f2",
            "domain": "vpc",
            "id": "eipalloc-05e187543173757f2",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-240-57-221.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.240.57.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-rcarrata-eu-west-1c"
            },
            "tags_all": {
              "Name": "tf-rcarrata-eu-west-1c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:internet-gateway/igw-0c357b835061f44e0",
            "id": "igw-0c357b835061f44e0",
            "owner_id": "742735434737",
            "tags": {
              "Name": "tf-rcarrata"
            },
            "tags_all": {
              "Name": "tf-rcarrata"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bd2993455e1ba15",
            "association_id": "eipassoc-0a4e205ee6b22ddfa",
            "connectivity_type": "public",
            "id": "nat-0e621dacd77104cfa",
            "network_interface_id": "eni-02e0e3e42839feedb",
            "private_ip": "10.66.101.104",
            "public_ip": "52.212.135.212",
            "subnet_id": "subnet-01045d29a0753e017",
            "tags": {
              "Name": "tf-rcarrata-eu-west-1a"
            },
            "tags_all": {
              "Name": "tf-rcarrata-eu-west-1a"
            }
          },
          "dependencies": [
            "module.rosa-vpc.aws_eip.nat",
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b2b4fa5c561f453",
            "association_id": "eipassoc-04c1e82f43aa9d385",
            "connectivity_type": "public",
            "id": "nat-0721bbc5b469891c1",
            "network_interface_id": "eni-0a2ef57b1bf462a55",
            "private_ip": "10.66.102.18",
            "public_ip": "52.18.179.199",
            "subnet_id": "subnet-01eb98bf7a509dcc4",
            "tags": {
              "Name": "tf-rcarrata-eu-west-1b"
            },
            "tags_all": {
              "Name": "tf-rcarrata-eu-west-1b"
            }
          },
          "dependencies": [
            "module.rosa-vpc.aws_eip.nat",
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e187543173757f2",
            "association_id": "eipassoc-0bf465023a72e8cfc",
            "connectivity_type": "public",
            "id": "nat-0e4e262815488f3de",
            "network_interface_id": "eni-0b2977f16b33c7db3",
            "private_ip": "10.66.103.79",
            "public_ip": "34.240.57.221",
            "subnet_id": "subnet-0eff49ff3fb6bae8f",
            "tags": {
              "Name": "tf-rcarrata-eu-west-1c"
            },
            "tags_all": {
              "Name": "tf-rcarrata-eu-west-1c"
            }
          },
          "dependencies": [
            "module.rosa-vpc.aws_eip.nat",
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04f87e26e131a92b01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e621dacd77104cfa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f87e26e131a92b0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_eip.nat",
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_nat_gateway.this",
            "module.rosa-vpc.aws_route_table.private",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02905f1b8784074381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0721bbc5b469891c1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02905f1b878407438",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_eip.nat",
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_nat_gateway.this",
            "module.rosa-vpc.aws_route_table.private",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0559c4d772912be181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e4e262815488f3de",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0559c4d772912be18",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_eip.nat",
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_nat_gateway.this",
            "module.rosa-vpc.aws_route_table.private",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c357b835061f44e0",
            "id": "r-rtb-0a848c77a851d45a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a848c77a851d45a2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_internet_gateway.this",
            "module.rosa-vpc.aws_route_table.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:route-table/rtb-04f87e26e131a92b0",
            "id": "rtb-04f87e26e131a92b0",
            "owner_id": "742735434737",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-rcarrata-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "tf-rcarrata-private-eu-west-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:route-table/rtb-02905f1b878407438",
            "id": "rtb-02905f1b878407438",
            "owner_id": "742735434737",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-rcarrata-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "tf-rcarrata-private-eu-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:route-table/rtb-0559c4d772912be18",
            "id": "rtb-0559c4d772912be18",
            "owner_id": "742735434737",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-rcarrata-private-eu-west-1c"
            },
            "tags_all": {
              "Name": "tf-rcarrata-private-eu-west-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:route-table/rtb-0a848c77a851d45a2",
            "id": "rtb-0a848c77a851d45a2",
            "owner_id": "742735434737",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-rcarrata-public"
            },
            "tags_all": {
              "Name": "tf-rcarrata-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3d53b40e849be90",
            "route_table_id": "rtb-04f87e26e131a92b0",
            "subnet_id": "subnet-0fc0e785b5a11d8df"
          },
          "dependencies": [
            "module.rosa-vpc.aws_route_table.private",
            "module.rosa-vpc.aws_subnet.private",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e7c4935e3007de3",
            "route_table_id": "rtb-02905f1b878407438",
            "subnet_id": "subnet-0414f20190315e0dc"
          },
          "dependencies": [
            "module.rosa-vpc.aws_route_table.private",
            "module.rosa-vpc.aws_subnet.private",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ac3d5a4007b4f34",
            "route_table_id": "rtb-0559c4d772912be18",
            "subnet_id": "subnet-0e607ed2a4e123c1a"
          },
          "dependencies": [
            "module.rosa-vpc.aws_route_table.private",
            "module.rosa-vpc.aws_subnet.private",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040c240952ad8f7a7",
            "route_table_id": "rtb-0a848c77a851d45a2",
            "subnet_id": "subnet-01045d29a0753e017"
          },
          "dependencies": [
            "module.rosa-vpc.aws_route_table.public",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078a34d4f0c5a4667",
            "route_table_id": "rtb-0a848c77a851d45a2",
            "subnet_id": "subnet-01eb98bf7a509dcc4"
          },
          "dependencies": [
            "module.rosa-vpc.aws_route_table.public",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9724727d10f5e27",
            "route_table_id": "rtb-0a848c77a851d45a2",
            "subnet_id": "subnet-0eff49ff3fb6bae8f"
          },
          "dependencies": [
            "module.rosa-vpc.aws_route_table.public",
            "module.rosa-vpc.aws_subnet.public",
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:subnet/subnet-0fc0e785b5a11d8df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.66.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc0e785b5a11d8df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742735434737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-rcarrata-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "tf-rcarrata-private-eu-west-1a"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:subnet/subnet-0414f20190315e0dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.66.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0414f20190315e0dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742735434737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-rcarrata-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "tf-rcarrata-private-eu-west-1b"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:subnet/subnet-0e607ed2a4e123c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.66.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e607ed2a4e123c1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742735434737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-rcarrata-private-eu-west-1c"
            },
            "tags_all": {
              "Name": "tf-rcarrata-private-eu-west-1c"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:subnet/subnet-01045d29a0753e017",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.66.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01045d29a0753e017",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742735434737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-rcarrata-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "tf-rcarrata-public-eu-west-1a"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:subnet/subnet-01eb98bf7a509dcc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.66.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eb98bf7a509dcc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742735434737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-rcarrata-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "tf-rcarrata-public-eu-west-1b"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:subnet/subnet-0eff49ff3fb6bae8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.66.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eff49ff3fb6bae8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742735434737",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-rcarrata-public-eu-west-1c"
            },
            "tags_all": {
              "Name": "tf-rcarrata-public-eu-west-1c"
            },
            "vpc_id": "vpc-014c74e8dd4934da1"
          },
          "dependencies": [
            "module.rosa-vpc.aws_vpc.this",
            "module.rosa-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.rosa-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742735434737:vpc/vpc-014c74e8dd4934da1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.66.0.0/16",
            "default_network_acl_id": "acl-0a37b0afe7a2c80ba",
            "default_route_table_id": "rtb-0ee916236e243ecf7",
            "default_security_group_id": "sg-0484bd9820f180075",
            "dhcp_options_id": "dopt-0f40d42f252975f23",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014c74e8dd4934da1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee916236e243ecf7",
            "owner_id": "742735434737",
            "tags": {
              "Name": "tf-rcarrata"
            },
            "tags_all": {
              "Name": "tf-rcarrata"
            }
          }
        }
      ]
    }
  ]
}